--- a/labs/built-in-logging/built-in-logging.ipynb
+++ b/labs/built-in-logging/built-in-logging.ipynb
@@ -71,7 +71,7 @@
     "apim_resource_name = \"apim\"\n",
     "apim_resource_location = \"westeurope\"\n",
     "#apim_resource_sku = \"Basicv2\"\n",
-    "apim_resource_sku = \"Consumption\" # not supported for the APIM resources defined in the bicep \n",
+    "apim_resource_sku = \"Consumption\" \n",
     "openai_resources = [ {\"name\": \"openai1\", \"location\": \"swedencentral\"}, {\"name\": \"openai2\", \"location\": \"francecentral\"} ] # list of OpenAI resources to deploy. Clear this list to use only the mock resources \n",
     "openai_resources_sku = \"S0\"\n",
     "openai_model_name = \"gpt-35-turbo\"\n",
