--- a/labs/built-in-logging/clean-up-resources.ipynb
+++ b/labs/built-in-logging/clean-up-resources.ipynb
@@ -11,14 +11,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python version: 3.12.0'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Python executable:c:\\\\Users\\\\u3184\\\\azdevops\\\\pevosdcgh\\\\AI-Gateway\\\\.venv\\\\Scripts\\\\python.exe'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'*********** Python version: details ************'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.12.0 (tags/v3.12.0:0fb18b0, Oct  2 2023, 13:03:39) [MSC v.1935 64 bit (AMD64)]\n",
+      "sys.version_info(major=3, minor=12, micro=0, releaselevel='final', serial=0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from platform import python_version\n",
+    "import sys\n",
+    "f'Python version: {python_version()}'\n",
+    "f'Python executable:{sys.executable}'\n",
+    "f'*********** Python version: details ************'\n",
+    "print(sys.version)\n",
+    "print(sys.version_info)\n",
+    "\n",
+    "#get_ipython().run_line_magic('config', 'IPCompleter.greedy=True')\n",
+    "#from IPython.core.interactiveshell import InteractiveShell\n",
+    "#InteractiveShell.ast_node_interactivity = \"all\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['az', 'deployment', 'group', 'show', '--name', 'built-in-logging', '-g', 'ail-pevo1-built-in-logging', '-o', 'json']\n",
+      "Exit Code: 3\n",
+      "Output:\n",
+      "\n",
+      "Error:\n",
+      "ERROR: (ResourceGroupNotFound) Resource group 'ail-pevo1-built-in-logging' could not be found.\n",
+      "Code: ResourceGroupNotFound\n",
+      "Message: Resource group 'ail-pevo1-built-in-logging' could not be found.\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "Stopping the execution of the cell.",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m Stopping the execution of the cell.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\.venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
     "import datetime\n",
+    "import platform\n",
+    "import subprocess\n",
     "\n",
+    "oss=platform.system()\n",
     "lab_prefix=\"ail-pevo1-\"\n",
     "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
@@ -30,13 +124,21 @@
     "    else:\n",
     "        print(\"👍🏻 \", name, \" was \", action, \" ⌚ \", datetime.datetime.now().time())\n",
     "\n",
-    "deployment_stdout = ! az deployment group show --name {deployment_name} -g {resource_group_name} -o json\n",
-    "exit_code=_exit_code\n",
+    "#deployment_stdout = ! az deployment group show --name {deployment_name} -g {resource_group_name} -o json\n",
     "\n",
-    "if exit_code != 1 :\n",
-    "    print(\"Deployment Error\", exit_code, deployment_name, resource_group_name)\n",
-    "    print(deployment_stdout)\n",
-    "    raise SystemExit(\"Stopping the execution of the cell.\")  \n",
+    "cmdStr= f\"az deployment group show --name {deployment_name} -g {resource_group_name} -o json\"\n",
+    "cmd=cmdStr.split(' ')\n",
+    "result = subprocess.run(cmd, capture_output=True, text=True, shell=True)\n",
+    "\n",
+    "cmd_rtc = result.returncode\n",
+    "cmd_out = result.stdout\n",
+    "cmd_err = result.stderr\n",
+    "\n",
+    "#if ( (oss=='Windows' and exit_code != 1) or (oss=='Linux' and exit_code != 0) ): \n",
+    "if ( cmd_rtc != 0 ): \n",
+    "        print(\"Deployment Error\", cmd_rtc, deployment_name, resource_group_name)\n",
+    "        print(cmd_err)\n",
+    "        raise SystemExit(\"Stopping the execution of the cell.\") \n",
     "\n",
     "deployment = json.loads(deployment_stdout.n)\n",
     "for resource in deployment.get(\"properties\").get(\"outputResources\"):\n",
