--- a/labs/semantic-caching/semantic-caching.ipynb
+++ b/labs/semantic-caching/semantic-caching.ipynb
@@ -51,23 +51,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Parameter Setting: created ⌚  14:54:13.947183\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
     "import datetime\n",
     "import requests\n",
     "\n",
+    "lab_prefix=\"ais-pevo4-\"\n",
+    "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
-    "resource_group_name = f\"lab-{deployment_name}\" # change the name to match your naming style\n",
+    "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
+    "\n",
     "resource_group_location = \"westeurope\"\n",
     "apim_resource_name = \"apim\"\n",
     "apim_resource_location = \"westeurope\"\n",
     "apim_resource_sku = \"Basicv2\"\n",
+    "#apim_resource_sku = \"Consumption\" \n",
     "openai_resources = [ {\"name\": \"openai1\", \"location\": \"swedencentral\"} ] # list of OpenAI resources to deploy. Clear this list to use only the mock resources\n",
     "openai_resources_sku = \"S0\"\n",
     "openai_model_name = \"gpt-35-turbo\"\n",
@@ -77,14 +89,18 @@
     "openai_specification_url='https://raw.githubusercontent.com/Azure/azure-rest-api-specs/main/specification/cognitiveservices/data-plane/AzureOpenAI/inference/stable/' + openai_api_version + '/inference.json'\n",
     "openai_backend_pool = \"openai-backend-pool\"\n",
     "mock_backend_pool = \"mock-backend-pool\"\n",
-    "mock_webapps = [ {\"name\": \"openaimock1\", \"endpoint\": \"https://openaimock1.azurewebsites.net\"}, {\"name\": \"openaimock2\", \"endpoint\": \"https://openaimock2.azurewebsites.net\"} ]\n",
+    "mock_webapps = [ {\"name\": \"openaimock1\", \"endpoint\": f\"https://{tool_prefix}openaimock1.azurewebsites.net\"}, {\"name\": \"openaimock2\", \"endpoint\": f\"https://{tool_prefix}openaimock2.azurewebsites.net\"} ]\n",
     "\n",
     "log_analytics_name = \"workspace\"\n",
     "app_insights_name = 'insights'\n",
     "embeddings_model_name = \"text-embedding-ada-002\"\n",
     "embeddings_model_version = \"2\"\n",
     "embeddings_deployment_name = \"text-embedding-ada-002\"\n",
+    "rediscache_sku = \"Basic\"\n",
+    "rediscache_capacity = 1\n",
     "rediscache_name = \"rediscache\"\n",
+    "\n",
+    "print(\"✅ Parameter Setting: created ⌚ \", datetime.datetime.now().time())\n",
     "\n"
    ]
   },
@@ -99,9 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Azure Resource Group  ais-pevo3-semantic-caching  created ⌚  15:38:46.843713\n"
+     ]
+    }
+   ],
    "source": [
     "resource_group_stdout = ! az group create --name {resource_group_name} --location {resource_group_location}\n",
     "if resource_group_stdout.n.startswith(\"ERROR\"):\n",
@@ -122,9 +146,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "915"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(2,7) : Warning no-unused-params: Parameter \"mockWebApps\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(5,7) : Warning no-unused-params: Parameter \"mockBackendPoolName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(8,7) : Warning no-unused-params: Parameter \"mockBackendPoolDescription\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(11,7) : Warning no-unused-params: Parameter \"openAIConfig\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(14,7) : Warning no-unused-params: Parameter \"openAIDeploymentName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(20,7) : Warning no-unused-params: Parameter \"openAISku\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(23,7) : Warning no-unused-params: Parameter \"openAIModelName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(26,7) : Warning no-unused-params: Parameter \"openAIModelVersion\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(29,7) : Warning no-unused-params: Parameter \"openAIModelCapacity\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(32,7) : Warning no-unused-params: Parameter \"apimResourceName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(35,7) : Warning no-unused-params: Parameter \"apimResourceLocation\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(47,7) : Warning no-unused-params: Parameter \"apimSku\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(55,7) : Warning no-unused-params: Parameter \"apimSkuCount\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(58,7) : Warning no-unused-params: Parameter \"apimPublisherEmail\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(61,7) : Warning no-unused-params: Parameter \"apimPublisherName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(64,7) : Warning no-unused-params: Parameter \"openAIAPIName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(67,7) : Warning no-unused-params: Parameter \"openAIAPIPath\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(70,7) : Warning no-unused-params: Parameter \"openAIAPIDisplayName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(73,7) : Warning no-unused-params: Parameter \"openAIAPIDescription\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(76,7) : Warning no-unused-params: Parameter \"openAIAPISpecURL\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(79,7) : Warning no-unused-params: Parameter \"openAISubscriptionName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(82,7) : Warning no-unused-params: Parameter \"openAISubscriptionDescription\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(85,7) : Warning no-unused-params: Parameter \"openAIBackendPoolName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(88,7) : Warning no-unused-params: Parameter \"openAIBackendPoolDescription\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(93,7) : Warning no-unused-params: Parameter \"logAnalyticsName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(96,7) : Warning no-unused-params: Parameter \"logAnalyticsLocation\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(99,7) : Warning no-unused-params: Parameter \"applicationInsightsName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(102,7) : Warning no-unused-params: Parameter \"applicationInsightsLocation\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(105,7) : Warning no-unused-params: Parameter \"apimLoggerName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(108,7) : Warning no-unused-params: Parameter \"apimLoggerDescription\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(111,7) : Warning no-unused-params: Parameter \"apiDiagnosticsLogBytes\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(114,7) : Warning no-unused-params: Parameter \"workbookName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(117,7) : Warning no-unused-params: Parameter \"workbookLocation\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(120,7) : Warning no-unused-params: Parameter \"workbookDisplayName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(127,7) : Warning no-unused-params: Parameter \"embeddingsDeploymentName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(130,7) : Warning no-unused-params: Parameter \"embeddingsModelName\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(133,7) : Warning no-unused-params: Parameter \"embeddingsModelVersion\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(136,7) : Warning no-unused-params: Parameter \"embeddingsModelCapacity\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(158,7) : Warning no-unused-params: Parameter \"redisEvictionPolicy\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "c:\\Users\\u3184\\azdevops\\pevosdcgh\\AI-Gateway\\labs\\semantic-caching\\redis.bicep(161,7) : Warning no-unused-params: Parameter \"redisPort\" is declared but never used. [https://aka.ms/bicep/linter/no-unused-params]\n",
+      "\n",
+      "\n",
+      "ERROR: {\"status\":\"Canceled\"}\n"
+     ]
+    }
+   ],
    "source": [
     "if len(openai_resources) > 0:\n",
     "    backend_id = openai_backend_pool if len(openai_resources) > 1 else openai_resources[0].get(\"name\")\n",
@@ -158,6 +288,8 @@
     "    \"embeddingsModelName\": { \"value\": embeddings_model_name },\n",
     "    \"embeddingsModelVersion\": { \"value\": embeddings_model_version },\n",
     "    \"embeddingsDeploymentName\": { \"value\": embeddings_deployment_name },\n",
+    "    \"redisCacheSKU\": { \"value\": rediscache_sku },\n",
+    "    \"redisCacheCapacity\": { \"value\": rediscache_capacity },\n",
     "    \"redisCacheName\": { \"value\": rediscache_name }\n",
     "  }\n",
     "}\n",
@@ -165,6 +297,7 @@
     "    bicep_parameters_file.write(json.dumps(bicep_parameters))\n",
     "\n",
     "! az deployment group create --name {deployment_name} --resource-group {resource_group_name} --template-file \"main.bicep\" --parameters \"params.json\"\n",
+    "#! az deployment group create --name {deployment_name} --resource-group {resource_group_name} --template-file \"redis.bicep\" --parameters \"params.json\"\n",
     "\n",
     "open(\"policy.xml\", 'w').write(policy_template_xml)\n"
    ]
@@ -289,7 +422,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -303,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
