--- a/labs/token-metrics-emitting/token-metrics-emitting.ipynb
+++ b/labs/token-metrics-emitting/token-metrics-emitting.ipynb
@@ -69,12 +69,16 @@
     "import datetime\n",
     "import requests\n",
     "\n",
+    "lab_prefix=\"aim-pevo1-\"\n",
+    "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
-    "resource_group_name = f\"lab-{deployment_name}\" # change the name to match your naming style\n",
+    "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
+    "\n",
     "resource_group_location = \"westeurope\"\n",
     "apim_resource_name = \"apim\"\n",
     "apim_resource_location = \"westeurope\"\n",
-    "apim_resource_sku = \"Basicv2\"\n",
+    "#apim_resource_sku = \"Basicv2\"\n",
+    "apim_resource_sku = \"Consumption\" \n",
     "openai_resources = [ {\"name\": \"openai1\", \"location\": \"swedencentral\"} ] # list of OpenAI resources to deploy. Clear this list to use only the mock resources\n",
     "openai_resources_sku = \"S0\"\n",
     "openai_model_name = \"gpt-35-turbo\"\n",
@@ -84,10 +88,12 @@
     "openai_specification_url='https://raw.githubusercontent.com/Azure/azure-rest-api-specs/main/specification/cognitiveservices/data-plane/AzureOpenAI/inference/stable/' + openai_api_version + '/inference.json'\n",
     "openai_backend_pool = \"openai-backend-pool\"\n",
     "mock_backend_pool = \"mock-backend-pool\"\n",
-    "mock_webapps = [ {\"name\": \"openaimock1\", \"endpoint\": \"https://openaimock1.azurewebsites.net\"}, {\"name\": \"openaimock2\", \"endpoint\": \"https://openaimock2.azurewebsites.net\"} ]\n",
+    "mock_webapps = [ {\"name\": \"openaimock1\", \"endpoint\": f\"https://{tool_prefix}openaimock1.azurewebsites.net\"}, {\"name\": \"openaimock2\", \"endpoint\": f\"https://{tool_prefix}openaimock2.azurewebsites.net\"} ]\n",
     "\n",
     "log_analytics_name = \"workspace\"\n",
-    "app_insights_name = 'insights'\n"
+    "app_insights_name = 'insights'\n",
+    "\n",
+    "print(\"✅ Set Variables  created ⌚ \", datetime.datetime.now().isoformat())"
    ]
   },
   {
@@ -164,7 +170,9 @@
     "\n",
     "! az deployment group create --name {deployment_name} --resource-group {resource_group_name} --template-file \"main.bicep\" --parameters \"params.json\"\n",
     "\n",
-    "open(\"policy.xml\", 'w').write(policy_template_xml)\n"
+    "open(\"policy.xml\", 'w').write(policy_template_xml)\n",
+    "\n",
+    "print(datetime.datetime.now().isoformat())\n"
    ]
   },
   {
@@ -203,7 +211,9 @@
     "\n",
     "deployment_stdout = ! az deployment group show --name {deployment_name} -g {resource_group_name} --query properties.outputs.applicationInsightsResourceName.value -o tsv\n",
     "app_insights_resource_name = deployment_stdout.n\n",
-    "print(\"👉🏻 Application Insights Resource Name: \", app_insights_resource_name)\n"
+    "print(\"👉🏻 Application Insights Resource Name: \", app_insights_resource_name)\n",
+    "\n",
+    "print(\"✅ Get Deployment Outputs ⌚ \", datetime.datetime.now().isoformat())\n"
    ]
   },
   {
@@ -373,7 +383,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -387,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
