--- a/labs/vector-searching/vector-searching.ipynb
+++ b/labs/vector-searching/vector-searching.ipynb
@@ -59,12 +59,17 @@
     "import datetime\n",
     "import requests\n",
     "\n",
+    "lab_prefix=\"aiv-pevo1-\"\n",
+    "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
-    "resource_group_name = f\"lab-{deployment_name}\" # change the name to match your naming style\n",
+    "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
+    "\n",
     "resource_group_location = \"westeurope\"\n",
     "apim_resource_name = \"apim\"\n",
     "apim_resource_location = \"westeurope\"\n",
-    "apim_resource_sku = \"Basicv2\"\n",
+    "#apim_resource_sku = \"Basicv2\"\n",
+    "apim_resource_sku = \"Consumption\" \n",
+    "\n",
     "openai_resources = [ {\"name\": \"openai1\", \"location\": \"uksouth\"} ] # list of OpenAI resources to deploy.\n",
     "openai_resources_sku = \"S0\"\n",
     "openai_model_name = \"gpt-35-turbo\"\n",
@@ -86,7 +91,9 @@
     "searchservice_sku = \"standard\"\n",
     "searchservice_api_path = \"searchservice\"\n",
     "searchindex_api_path = \"searchindex\"\n",
-    "searchindex_name = \"movies\"\n"
+    "searchindex_name = \"movies\"\n",
+    "\n",
+    "print(\"✅ Set Variables  created ⌚ \", datetime.datetime.now().isoformat())"
    ]
   },
   {
@@ -108,7 +115,7 @@
     "if resource_group_stdout.n.startswith(\"ERROR\"):\n",
     "    print(resource_group_stdout)\n",
     "else:\n",
-    "    print(\"✅ Azure Resource Group \", resource_group_name, \" created ⌚ \", datetime.datetime.now().time())"
+    "    print(\"✅ Azure Resource Group \", resource_group_name, \" created ⌚ \", datetime.datetime.now().isoformat())"
    ]
   },
   {
@@ -171,7 +178,9 @@
     "\n",
     "! az deployment group create --name {deployment_name} --resource-group {resource_group_name} --template-file \"main.bicep\" --parameters \"params.json\"\n",
     "\n",
-    "open(\"policy.xml\", 'w').write(policy_template_xml)\n"
+    "open(\"policy.xml\", 'w').write(policy_template_xml)\n",
+    "\n",
+    "print(datetime.datetime.now().isoformat())\n"
    ]
   },
   {
@@ -216,7 +225,8 @@
     "! pip install azure-identity -q\n",
     "! pip install langchain==0.1.6 -q\n",
     "! pip install langchain-openai -q\n",
-    "! pip install langchain-community==0.0.19 -q"
+    "! pip install langchain-community==0.0.19 -q\n",
+    "print(datetime.datetime.now().isoformat())"
    ]
   },
   {
@@ -372,7 +382,7 @@
     "\n",
     "result = search_client.upload_documents(items)\n",
     "\n",
-    "print(f\"Successfully loaded {len(data)} movies into Azure AI Search index.\")"
+    "print(f\"Successfully loaded {len(data)} movies into Azure AI Search index.\", datetime.datetime.now().isoformat())"
    ]
   },
   {
@@ -518,7 +528,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -532,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
