--- a/labs/slm-self-hosting/clean-up-resources.ipynb
+++ b/labs/slm-self-hosting/clean-up-resources.ipynb
@@ -11,16 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "👍🏻  apim-xg6rey4pqgodg  was  deleted  ⌚  23:29:21.057022\n",
+      "👍🏻  apim-xg6rey4pqgodg  was  purged  ⌚  23:30:25.491864\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aish-pevo1-slm-self-hosting/providers/Microsoft.ApiManagement/service/apim-xg6rey4pqgodg/apis/openai  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aish-pevo1-slm-self-hosting/providers/Microsoft.ApiManagement/service/apim-xg6rey4pqgodg/apis/openai/policies/policy  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aish-pevo1-slm-self-hosting/providers/Microsoft.ApiManagement/service/apim-xg6rey4pqgodg/backends/phi-3  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aish-pevo1-slm-self-hosting/providers/Microsoft.ApiManagement/service/apim-xg6rey4pqgodg/gateways/self-hosted-gateway  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aish-pevo1-slm-self-hosting/providers/Microsoft.ApiManagement/service/apim-xg6rey4pqgodg/gateways/self-hosted-gateway/apis/openai  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aish-pevo1-slm-self-hosting/providers/Microsoft.ApiManagement/service/apim-xg6rey4pqgodg/subscriptions/openai-subscription  ignored\n",
+      "👍🏻  aish-pevo1-slm-self-hosting  was  deleted  ⌚  23:30:49.605793\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
     "import datetime\n",
     "\n",
+    "lab_prefix=\"aish-pevo1-\"\n",
+    "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
-    "resource_group_name = f\"lab-{deployment_name}\"\n",
+    "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
+    "\n",
     "\n",
     "def log(stdout, name, action):\n",
     "    if stdout.n.startswith(\"ERROR\"):\n",
@@ -60,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -74,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
