--- a/labs/message-storing/message-storing.ipynb
+++ b/labs/message-storing/message-storing.ipynb
@@ -61,12 +61,17 @@
     "import datetime\n",
     "import requests\n",
     "\n",
+    "lab_prefix=\"aims-pevo3-\"\n",
+    "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
-    "resource_group_name = f\"lab-{deployment_name}\" # change the name to match your naming style\n",
+    "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
+    "\n",
     "resource_group_location = \"westeurope\"\n",
     "apim_resource_name = \"apim\"\n",
     "apim_resource_location = \"westeurope\"\n",
-    "apim_resource_sku = \"Basicv2\"\n",
+    "#apim_resource_sku = \"Basicv2\"\n",
+    "apim_resource_sku = \"Consumption\" \n",
+    "\n",
     "openai_resources = [ {\"name\": \"openai1\", \"location\": \"swedencentral\"}, {\"name\": \"openai2\", \"location\": \"francecentral\"} ] # list of OpenAI resources to deploy. Clear this list to use only the mock resources\n",
     "openai_resources_sku = \"S0\"\n",
     "openai_model_name = \"gpt-35-turbo\"\n",
@@ -76,7 +81,7 @@
     "openai_specification_url='https://raw.githubusercontent.com/Azure/azure-rest-api-specs/main/specification/cognitiveservices/data-plane/AzureOpenAI/inference/stable/' + openai_api_version + '/inference.json'\n",
     "openai_backend_pool = \"openai-backend-pool\"\n",
     "mock_backend_pool = \"mock-backend-pool\"\n",
-    "mock_webapps = [ {\"name\": \"openaimock1\", \"endpoint\": \"https://openaimock1.azurewebsites.net\"}, {\"name\": \"openaimock2\", \"endpoint\": \"https://openaimock2.azurewebsites.net\"} ]\n",
+    "mock_webapps = [ {\"name\": \"openaimock1\", \"endpoint\": f\"https://{tool_prefix}openaimock1.azurewebsites.net\"}, {\"name\": \"openaimock2\", \"endpoint\": f\"https://{tool_prefix}openaimock2.azurewebsites.net\"} ]\n",
     "\n",
     "log_analytics_name = \"workspace\"\n",
     "app_insights_name = 'insights'\n",
@@ -84,10 +89,13 @@
     "eventhub_namespace_name = \"eventhub\"\n",
     "eventhub_logger_name = \"eventhub-logger\"\n",
     "eventhub_name = \"openai-messages\"\n",
+    "eventhub_sku=\"Basic\"\n",
     "streamingjobs_name = \"streamingjobs\"\n",
     "cosmosdb_account_name = \"cosmosdb\"\n",
     "cosmosdb_database_name = \"openaidb\"\n",
-    "cosmosdb_container_name = \"messages\"\n"
+    "cosmosdb_container_name = \"messages\"\n",
+    "\n",
+    "print(\"✅ Set Variables done ⌚ \", datetime.datetime.now().isoformat())\n"
    ]
   },
   {
@@ -160,6 +168,8 @@
     "    \"eventHubNamespaceName\": { \"value\": eventhub_namespace_name },\n",
     "    \"eventHubLoggerName\": { \"value\": eventhub_logger_name },\n",
     "    \"eventHubName\": { \"value\": eventhub_name },\n",
+    "    \"eventHubSKU\": { \"value\": eventhub_sku },\n",
+    "\n",
     "    \"streamingJobsName\": { \"value\": streamingjobs_name },\n",
     "    \"cosmosDBAccountName\": { \"value\": cosmosdb_account_name },\n",
     "    \"cosmosDBDatabaseName\": { \"value\": cosmosdb_database_name },\n",
@@ -171,7 +181,8 @@
     "\n",
     "! az deployment group create --name {deployment_name} --resource-group {resource_group_name} --template-file \"main.bicep\" --parameters \"params.json\"\n",
     "\n",
-    "open(\"policy.xml\", 'w').write(policy_template_xml)\n"
+    "open(\"policy.xml\", 'w').write(policy_template_xml)\n",
+    "print(datetime.datetime.now().isoformat())\n"
    ]
   },
   {
@@ -206,7 +217,8 @@
     "\n",
     "deployment_stdout = ! az deployment group show --name {deployment_name} -g {resource_group_name} --query properties.outputs.cosmosDBConnectionString.value -o tsv\n",
     "cosmosdb_connection_string = deployment_stdout.n\n",
-    "\n"
+    "\n",
+    "print(\"✅ Get Deployment Output - Done ⌚ \", datetime.datetime.now().isoformat())\n"
    ]
   },
   {
@@ -375,7 +387,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -389,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
