--- a/labs/message-storing/clean-up-resources.ipynb
+++ b/labs/message-storing/clean-up-resources.ipynb
@@ -19,7 +19,7 @@
     "import json\n",
     "import datetime\n",
     "\n",
-    "lab_prefix=\"aims-pevo2-\"\n",
+    "lab_prefix=\"aims-pevo4-\"\n",
     "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
     "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
@@ -28,7 +28,7 @@
     "    if stdout.n.startswith(\"ERROR\"):\n",
     "        print(\"👎🏻 \", name, \" was NOT \", action, \": \", stdout)\n",
     "    else:\n",
-    "        print(\"👍🏻 \", name, \" was \", action, \" ⌚ \", datetime.datetime.now().isotime())\n",
+    "        print(\"👍🏻 \", name, \" was \", action, \" ⌚ \", datetime.datetime.now().isoformat())\n",
     "\n",
     "deployment_stdout = ! az deployment group show --name {deployment_name} -g {resource_group_name} -o json   \n",
     "if deployment_stdout.n.startswith(\"ERROR\"):\n",
@@ -69,7 +69,9 @@
     "delete_stdout = ! az group delete --name {resource_group_name} -y\n",
     "log(delete_stdout, resource_group_name, \"deleted\")\n",
     "\n",
-    "print(\"✅ Cleaned up ! ⌚ \", datetime.datetime.now().isoformat())\n"
+    "print(\"✅ Cleaned up ! ⌚ \", datetime.datetime.now().isoformat())\n",
+    "print(\"✅ Set Variables done ⌚ \", datetime.datetime.now().isoformat())\n",
+    "\n"
    ]
   }
  ],
@@ -89,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
