--- a/labs/GPT-4o-inferencing/clean-up-resources.ipynb
+++ b/labs/GPT-4o-inferencing/clean-up-resources.ipynb
@@ -11,16 +11,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "👍🏻  apim-wksiztrbb7ubs  was  deleted  ⌚  12:59:44.299435\n",
+      "👍🏻  apim-wksiztrbb7ubs  was  purged  ⌚  13:01:14.994597\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aig-pevo1-GPT-4o-inferencing/providers/Microsoft.ApiManagement/service/apim-wksiztrbb7ubs/apis/openai  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aig-pevo1-GPT-4o-inferencing/providers/Microsoft.ApiManagement/service/apim-wksiztrbb7ubs/apis/openai/diagnostics/applicationinsights  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aig-pevo1-GPT-4o-inferencing/providers/Microsoft.ApiManagement/service/apim-wksiztrbb7ubs/apis/openai/policies/policy  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aig-pevo1-GPT-4o-inferencing/providers/Microsoft.ApiManagement/service/apim-wksiztrbb7ubs/backends/openai1  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aig-pevo1-GPT-4o-inferencing/providers/Microsoft.ApiManagement/service/apim-wksiztrbb7ubs/loggers/apim-logger  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aig-pevo1-GPT-4o-inferencing/providers/Microsoft.ApiManagement/service/apim-wksiztrbb7ubs/subscriptions/openai-subscription  ignored\n",
+      "👍🏻  openai1-wksiztrbb7ubs  was  deleted  ⌚  13:01:28.154331\n",
+      "👍🏻  openai1-wksiztrbb7ubs  was  purged  ⌚  13:02:01.899540\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aig-pevo1-GPT-4o-inferencing/providers/Microsoft.CognitiveServices/accounts/openai1-wksiztrbb7ubs/deployments/gpt-4o  ignored\n",
+      "✌🏻  /subscriptions/a46c2e68-1def-41bf-b7dd-c8ec765e3367/resourceGroups/aig-pevo1-GPT-4o-inferencing/providers/Microsoft.CognitiveServices/accounts/openai1-wksiztrbb7ubs/providers/Microsoft.Authorization/roleAssignments/1631ba61-cf96-5640-b49b-2456fb26d54d  ignored\n",
+      "👍🏻  aig-pevo1-GPT-4o-inferencing  was  deleted  ⌚  13:03:27.085774\n",
+      "2024-10-26T13:03:27.086000\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
     "import datetime\n",
     "\n",
+    "lab_prefix=\"aig-pevo1-\"\n",
+    "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
-    "resource_group_name = f\"lab-{deployment_name}\"\n",
+    "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
     "\n",
     "def log(stdout, name, action):\n",
     "    if stdout.n.startswith(\"ERROR\"):\n",
@@ -29,6 +52,18 @@
     "        print(\"👍🏻 \", name, \" was \", action, \" ⌚ \", datetime.datetime.now().time())\n",
     "\n",
     "deployment_stdout = ! az deployment group show --name {deployment_name} -g {resource_group_name} -o json    \n",
+    "if deployment_stdout.n.startswith(\"ERROR\"):\n",
+    "    print(\"👎🏻 No active deployments: \\n\", deployment_stdout)\n",
+    "    raise KeyboardInterrupt \n",
+    "\n",
+    "deployment = json.loads(deployment_stdout.n)\n",
+    "if deployment.get(\"properties\").get(\"outputResources\") is None:\n",
+    "    delete_stdout = ! az group delete --name {resource_group_name} -y\n",
+    "    log(delete_stdout, resource_group_name, \"deleted\")\n",
+    "    print(\"👎🏻 Failed deployment: \\n\", deployment)\n",
+    "    print(\"\\nexiting without doing any purge of resources\")\n",
+    "    raise KeyboardInterrupt  \n",
+    "\n",
     "deployment = json.loads(deployment_stdout.n)\n",
     "for resource in deployment.get(\"properties\").get(\"outputResources\"):\n",
     "    resource_id = resource.get(\"id\")\n",
@@ -54,13 +89,14 @@
     "        print(\"✌🏻 \", resource_id, \" ignored\")\n",
     "delete_stdout = ! az group delete --name {resource_group_name} -y\n",
     "log(delete_stdout, resource_group_name, \"deleted\")\n",
-    "\n"
+    "\n",
+    "print(datetime.datetime.now().isoformat())"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -74,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
