--- a/labs/developer-tooling/clean-up-resources.ipynb
+++ b/labs/developer-tooling/clean-up-resources.ipynb
@@ -19,8 +19,11 @@
     "import json\n",
     "import datetime\n",
     "\n",
+    "lab_prefix=\"aid-pevo1-\"\n",
+    "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
-    "resource_group_name = f\"lab-{deployment_name}\"\n",
+    "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
+    "\n",
     "\n",
     "def log(stdout, name, action):\n",
     "    if stdout.n.startswith(\"ERROR\"):\n",
@@ -29,6 +32,18 @@
     "        print(\"👍🏻 \", name, \" was \", action, \" ⌚ \", datetime.datetime.now().time())\n",
     "\n",
     "deployment_stdout = ! az deployment group show --name {deployment_name} -g {resource_group_name} -o json    \n",
+    "if deployment_stdout.n.startswith(\"ERROR\"):\n",
+    "    print(\"👎🏻 No active deployments: \\n\", deployment_stdout)\n",
+    "    raise KeyboardInterrupt \n",
+    "\n",
+    "deployment = json.loads(deployment_stdout.n)\n",
+    "if deployment.get(\"properties\").get(\"outputResources\") is None:\n",
+    "    delete_stdout = ! az group delete --name {resource_group_name} -y\n",
+    "    log(delete_stdout, resource_group_name, \"deleted\")\n",
+    "    print(\"👎🏻 Failed deployment: \\n\", deployment)\n",
+    "    print(\"\\nexiting without doing any purge of resources\")\n",
+    "    raise KeyboardInterrupt  \n",
+    "\n",
     "deployment = json.loads(deployment_stdout.n)\n",
     "for resource in deployment.get(\"properties\").get(\"outputResources\"):\n",
     "    resource_id = resource.get(\"id\")\n",
@@ -60,7 +75,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -74,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
