--- a/labs/developer-tooling/developer-tooling.ipynb
+++ b/labs/developer-tooling/developer-tooling.ipynb
@@ -43,12 +43,18 @@
     "import datetime\n",
     "import requests\n",
     "\n",
+    "lab_prefix=\"aid-pevo1-\"\n",
+    "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
-    "resource_group_name = f\"lab-{deployment_name}\" # change the name to match your naming style\n",
+    "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
+    "\n",
     "resource_group_location = \"westeurope\"\n",
     "apim_resource_name = \"apim\"\n",
     "apim_resource_location = \"westeurope\"\n",
-    "apim_resource_sku = \"Basicv2\"\n",
+    "\n",
+    "#apim_resource_sku = \"Basicv2\"\n",
+    "apim_resource_sku = \"Consumption\" \n",
+    "\n",
     "openai_resources = [ {\"name\": \"openai1\", \"location\": \"swedencentral\"}, {\"name\": \"openai2\", \"location\": \"francecentral\"} ] # list of OpenAI resources to deploy. Clear this list to use only the mock resources\n",
     "openai_resources_sku = \"S0\"\n",
     "openai_model_name = \"gpt-35-turbo\"\n",
@@ -58,7 +64,9 @@
     "openai_specification_url='https://raw.githubusercontent.com/Azure/azure-rest-api-specs/main/specification/cognitiveservices/data-plane/AzureOpenAI/inference/stable/' + openai_api_version + '/inference.json'\n",
     "openai_backend_pool = \"openai-backend-pool\"\n",
     "mock_backend_pool = \"mock-backend-pool\"\n",
-    "mock_webapps = [ {\"name\": \"openaimock1\", \"endpoint\": \"https://openaimock1.azurewebsites.net\"}, {\"name\": \"openaimock2\", \"endpoint\": \"https://openaimock2.azurewebsites.net\"} ]\n"
+    "mock_webapps = [ {\"name\": \"openaimock1\", \"endpoint\": f\"https://{tool_prefix}openaimock1.azurewebsites.net\"}, {\"name\": \"openaimock2\", \"endpoint\": f\"https://{tool_prefix}openaimock2.azurewebsites.net\"} ]\n",
+    "\n",
+    "print(\"✅ Set Variables done ⌚ \", datetime.datetime.now().isoformat())\n"
    ]
   },
   {
@@ -131,7 +139,10 @@
     "\n",
     "! az deployment group create --name {deployment_name} --resource-group {resource_group_name} --template-file \"main.bicep\" --parameters \"params.json\"\n",
     "\n",
-    "open(\"policy.xml\", 'w').write(policy_template_xml)\n"
+    "open(\"policy.xml\", 'w').write(policy_template_xml)\n",
+    "\n",
+    "print(\"✅ bicep based deployment done ⌚ \", datetime.datetime.now().isoformat())\n",
+    "\n"
    ]
   },
   {
@@ -256,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -270,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
