--- a/labs/prompt-flow/clean-up-resources.ipynb
+++ b/labs/prompt-flow/clean-up-resources.ipynb
@@ -19,7 +19,7 @@
     "import json\n",
     "import datetime\n",
     "\n",
-    "lab_prefix=\"aip-pevo1-\"\n",
+    "lab_prefix=\"aip-pevo2-\"\n",
     "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
     "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
@@ -75,7 +75,8 @@
     "        print(\"✌🏻 \", resource_id, \" ignored\")\n",
     "delete_stdout = ! az group delete --name {resource_group_name} -y\n",
     "log(delete_stdout, resource_group_name, \"deleted\")\n",
-    "\n"
+    "\n",
+    "print(datetime.datetime.now().isoformat())\n"
    ]
   }
  ],
@@ -95,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
