--- a/labs/vector-searching/vector-searching.ipynb
+++ b/labs/vector-searching/vector-searching.ipynb
@@ -203,7 +203,8 @@
     "apim_subscription_key = deployment_stdout.n\n",
     "deployment_stdout = ! az deployment group show --name {deployment_name} -g {resource_group_name} --query properties.outputs.apimResourceGatewayURL.value -o tsv\n",
     "apim_resource_gateway_url = deployment_stdout.n\n",
-    "print(\"👉🏻 API Gateway URL: \", apim_resource_gateway_url)"
+    "print(\"👉🏻 API Gateway URL: \", apim_resource_gateway_url)\n",
+    "print(datetime.datetime.now().isoformat())\n"
    ]
   },
   {
@@ -420,7 +421,9 @@
     "for result in results:\n",
     "    print(\"Movie: {}\".format(result[\"title\"]))\n",
     "    print(\"Genre: {}\".format(result[\"genre\"]))\n",
-    "    print(\"----------\")"
+    "    print(\"----------\")\n",
+    "\n",
+    "print(datetime.datetime.now().isoformat())\n"
    ]
   },
   {
@@ -511,7 +514,9 @@
     "# Build the Prompt and Execute against the Azure OpenAI to get the completion\n",
     "chain = LLMChain(llm=azure_openai, prompt=prompt, verbose=False)\n",
     "response = chain.invoke({\"original_question\": query, \"search_results\": results})\n",
-    "print(response['text'])"
+    "print(response['text'])\n",
+    "\n",
+    "print(datetime.datetime.now().isoformat())\n"
    ]
   },
   {
