--- a/labs/function-calling/function-calling.ipynb
+++ b/labs/function-calling/function-calling.ipynb
@@ -92,7 +92,9 @@
     "function_app_name = lab_prefix + \"function\"\n",
     "#storage_account_name = (lab_prefix + \"storage\").replace('-','')[:20]\n",
     "storage_account_name='storage'\n",
-    "print(\"storage_account_name\",storage_account_name)\n"
+    "print(\"storage_account_name\",storage_account_name)\n",
+    "\n",
+    "print(\"✅ Set Variables done ⌚ \", datetime.datetime.now().isoformat())\n"
    ]
   },
   {
@@ -171,7 +173,9 @@
     "\n",
     "! az deployment group create --name {deployment_name} --resource-group {resource_group_name} --template-file \"main.bicep\" --parameters \"params.json\"\n",
     "\n",
-    "open(\"policy.xml\", 'w').write(policy_template_xml)\n"
+    "open(\"policy.xml\", 'w').write(policy_template_xml)\n",
+    "\n",
+    "print(datetime.datetime.now().isoformat())\n"
    ]
   },
   {
@@ -204,7 +208,10 @@
     "\n",
     "deployment_stdout = ! az deployment group show --name {deployment_name} -g {resource_group_name} --query properties.outputs.functionAppResourceName.value -o tsv\n",
     "function_app_resource_name = deployment_stdout.n\n",
-    "print(\"👉🏻 Function Name: \", function_app_resource_name)\n"
+    "print(\"👉🏻 Function Name: \", function_app_resource_name)\n",
+    "\n",
+    "print(datetime.datetime.now().isoformat())\n",
+    "\n"
    ]
   },
   {
@@ -223,7 +230,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! func azure functionapp publish {function_app_resource_name}"
+    "! func azure functionapp publish {function_app_resource_name}\n",
+    "print(datetime.datetime.now().isoformat())\n"
    ]
   },
   {
@@ -364,6 +372,137 @@
     "        extra_headers = {\"Request-Id\": UUID}\n",
     "    )  # get a new response from the model where it can see the function response\n",
     "    print(second_response.choices[0].message.content)\n",
+    "\n",
+    "print(datetime.datetime.now().isoformat())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import AzureOpenAI\n",
+    "import uuid\n",
+    "\n",
+    "prompt = \"What's the weather like in London and its big sister cities?\"\n",
+    "\n",
+    "UUID = str(uuid.uuid4())\n",
+    "print(f\"Request-Id: {UUID} - use this ID to trace the requests in Azure Application Insights.\")\n",
+    "\n",
+    "client = AzureOpenAI(\n",
+    "    azure_endpoint=apim_resource_gateway_url,\n",
+    "    api_key=apim_subscription_key,\n",
+    "    api_version=openai_api_version\n",
+    ")\n",
+    "\n",
+    "# Example function hard coded to return the same weather\n",
+    "# the local function calls the API\n",
+    "def get_current_stock_price(location, unit):\n",
+    "    request = { \"location\": location, \"unit\": unit }\n",
+    "    url = apim_resource_gateway_url + \"/weather\"\n",
+    "    response = requests.post(url, headers = {'api-key':apim_subscription_key, \"Request-Id\": UUID}, json = request)\n",
+    "    if (response.status_code == 200):\n",
+    "        return response.text\n",
+    "    else:\n",
+    "        return json.dumps({\"location\": location, \"temperature\": \"unknown\"})\n",
+    "\n",
+    "# Step 1: send the conversation and available functions to the model\n",
+    "messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "tools = [\n",
+    "    {\n",
+    "        \"type\": \"function\",\n",
+    "        \"function\": {\n",
+    "            \"name\": \"get_current_stock_price\",\n",
+    "            \"description\": \"Get the current stock price in a given location, using the local currency measuring unit.\",\n",
+    "            \"parameters\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\n",
+    "                    \"location\": {\n",
+    "                        \"type\": \"string\",\n",
+    "                        \"description\": \"The city and state, e.g. San Francisco, CA\",\n",
+    "                    },\n",
+    "                    \"unit\": {\n",
+    "                        \"type\": \"string\",\n",
+    "                        \"description\": \"The currency measuring unit, e.g. celsius for London or fahrenheit for US cities\",\n",
+    "                        \"enum\": [\"sterling\", \"euro\", \"dollars\"]\n",
+    "                    },\n",
+    "                },\n",
+    "                \"required\": [\"location\", \"unit\"],\n",
+    "            },\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"type\": \"function\",\n",
+    "        \"function\": {\n",
+    "            \"name\": \"get_current_weather\",\n",
+    "            \"description\": \"Get the current weather in a given location, using the local temperature measuring unit.\",\n",
+    "            \"parameters\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\n",
+    "                    \"location\": {\n",
+    "                        \"type\": \"string\",\n",
+    "                        \"description\": \"The city and state, e.g. San Francisco, CA\",\n",
+    "                    },\n",
+    "                    \"unit\": {\n",
+    "                        \"type\": \"string\",\n",
+    "                        \"description\": \"The temperature measuring unit, e.g. celsius for London or fahrenheit for US cities\",\n",
+    "                        \"enum\": [\"celsius\", \"fahrenheit\"]\n",
+    "                    },\n",
+    "                },\n",
+    "                \"required\": [\"location\", \"unit\"],\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "print(\"▶️ Step 1: start a completion to identify the appropriate functions to invoke based on the prompt\\n\", prompt)\n",
+    "response = client.chat.completions.create(\n",
+    "    model=openai_deployment_name,\n",
+    "    messages=messages,\n",
+    "    tools=tools,\n",
+    "    tool_choice=\"auto\",  # auto is default, but we'll be explicit\n",
+    "    extra_headers = {\"Request-Id\": UUID}\n",
+    ")\n",
+    "response_message = response.choices[0].message\n",
+    "tool_calls = response_message.tool_calls\n",
+    "if tool_calls:\n",
+    "    # Step 2: call the function\n",
+    "    # Note: the JSON response may not always be valid; be sure to handle errors\n",
+    "    available_functions = {\n",
+    "        \"get_current_stock_price\": get_current_stock_price,\n",
+    "        \"get_current_weather\": get_current_weather\n",
+    "\n",
+    "    }  # only one function in this example, but you can have multiple\n",
+    "    messages.append(response_message)  # extend conversation with assistant's reply\n",
+    "    # send the info for each function call and function response to the model\n",
+    "    print(\"▶️ Step 2: call the functions\")\n",
+    "    for tool_call in tool_calls:\n",
+    "        function_name = tool_call.function.name\n",
+    "        function_to_call = available_functions[function_name]\n",
+    "        function_args = json.loads(tool_call.function.arguments)\n",
+    "        function_response = function_to_call(\n",
+    "            location=function_args.get(\"location\"),\n",
+    "            unit=function_args.get(\"unit\"),\n",
+    "        )\n",
+    "        print(function_response)\n",
+    "        messages.append(\n",
+    "            {\n",
+    "                \"tool_call_id\": tool_call.id,\n",
+    "                \"role\": \"tool\",\n",
+    "                \"name\": function_name,\n",
+    "                \"content\": function_response,\n",
+    "            }\n",
+    "        )  # extend conversation with function response\n",
+    "    print(\"▶️ Step 3: finish with a completion to anwser the user prompt using the function response\")\n",
+    "    second_response = client.chat.completions.create(\n",
+    "        model=openai_deployment_name,\n",
+    "        messages=messages,\n",
+    "        extra_headers = {\"Request-Id\": UUID}\n",
+    "    )  # get a new response from the model where it can see the function response\n",
+    "    print(second_response.choices[0].message.content)\n",
+    "\n",
+    "print(datetime.datetime.now().isoformat())\n",
     "\n"
    ]
   },
@@ -395,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
