--- a/labs/vector-searching/clean-up-resources.ipynb
+++ b/labs/vector-searching/clean-up-resources.ipynb
@@ -19,7 +19,7 @@
     "import json\n",
     "import datetime\n",
     "\n",
-    "lab_prefix=\"aiv-pevo1-\"\n",
+    "lab_prefix=\"aiv-pevo3-\"\n",
     "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
     "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
@@ -70,7 +70,8 @@
     "        print(\"✌🏻 \", resource_id, \" ignored\")\n",
     "delete_stdout = ! az group delete --name {resource_group_name} -y\n",
     "log(delete_stdout, resource_group_name, \"deleted\")\n",
-    "\n"
+    "\n",
+    "print(\"✅ Cleaned up ! ⌚ \", datetime.datetime.now().isoformat())"
    ]
   }
  ],
