--- a/labs/message-storing/clean-up-resources.ipynb
+++ b/labs/message-storing/clean-up-resources.ipynb
@@ -19,7 +19,7 @@
     "import json\n",
     "import datetime\n",
     "\n",
-    "lab_prefix=\"aims-pevo4-\"\n",
+    "lab_prefix=\"aims-pevo6-\"\n",
     "tool_prefix=\"st-pevo1-\"\n",
     "deployment_name = os.path.basename(os.path.dirname(globals()['__vsc_ipynb_file__']))\n",
     "resource_group_name = f\"{lab_prefix}{deployment_name}\" # change the name to match your naming style\n",
@@ -69,9 +69,7 @@
     "delete_stdout = ! az group delete --name {resource_group_name} -y\n",
     "log(delete_stdout, resource_group_name, \"deleted\")\n",
     "\n",
-    "print(\"✅ Cleaned up ! ⌚ \", datetime.datetime.now().isoformat())\n",
-    "print(\"✅ Set Variables done ⌚ \", datetime.datetime.now().isoformat())\n",
-    "\n"
+    "print(\"✅ Cleaned up ! ⌚ \", datetime.datetime.now().isoformat())\n"
    ]
   }
  ],
